--- a/ComePenny/app/src/main/res/layout/activity_idea_detail.xml
+++ b/ComePenny/app/src/main/res/layout/activity_idea_detail.xml
@@ -1,21 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical">
-
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/mainidea_toolbar"
+            android:id="@+id/idea_detail_toolbar"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:background="#29c5e4"
-            >
+            android:background="#29c5e4">
 
             <!--
             -->
@@ -37,175 +34,20 @@
                 android:clickable="false"
                 android:focusable="false"
                 android:longClickable="false"
-                android:text="Lego"
+                android:text=""
                 android:textColor="#ffffff"
                 android:textSize="20dp" />
         </android.support.v7.widget.Toolbar>
     </RelativeLayout>
 
 
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/scrollView_mainidea_detail"
-        android:layout_width="fill_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:orientation="vertical">
+    <ListView
+        android:id="@+id/lv_idea_detail_comments"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:listSelector="@android:color/transparent"
+        android:paddingTop="4dp"
+        android:scrollbars="none" />
 
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginLeft="14dp"
-                    android:layout_marginTop="14dp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/tv_ideatitle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="My Love"
-                        android:textColor="#313131"
-                        android:textSize="18sp" />
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="11dp"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Writer : "
-                            android:textColor="#959595"
-                            android:textSize="12sp" />
-
-                        <TextView
-                            android:id="@+id/tv_Writer"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="jihoon2341"
-                            android:textColor="#535353"
-                            android:textSize="12sp" />
-
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="11dp"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="view : "
-                            android:textColor="#959595"
-                            android:textSize="12sp" />
-
-                        <TextView
-                            android:id="@+id/tv_view"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="1253"
-                            android:textColor="#959595"
-                            android:textSize="12sp" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="16dp"
-                            android:text="like : "
-                            android:textColor="#959595"
-                            android:textSize="12sp" />
-
-                        <TextView
-                            android:id="@+id/tv_like"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="1233"
-                            android:textColor="#959595"
-                            android:textSize="12dp" />
-
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-                <ImageView
-                    android:id="@+id/Img_company"
-                    android:layout_width="match_parent"
-                    android:layout_height="240dp"
-                    android:layout_marginBottom="21dp"
-                    android:layout_marginLeft="14dp"
-                    android:layout_marginRight="14dp"
-                    android:src="@drawable/detail_uploadfile_base" />
-
-                <TextView
-                    android:id="@+id/tv_ideaoriginal"
-                    android:layout_width="match_parent"
-                    android:layout_height="122dp"
-                    android:layout_marginBottom="15dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    android:text="I am trying to understand. I am already to go out. I am just about to go to bed. I am calling to make a reservation. I am trying to understand. I am ready to go out. I am trying to understang. I and ready to go out. I am just about to go to bed."
-                    android:textColor="#313131"
-                    android:textSize="14sp" />
-
-                <ImageButton
-                    android:id="@+id/btn_pick"
-                    android:layout_width="84dp"
-                    android:layout_height="47dp"
-                    android:layout_gravity="center"
-                    android:layout_marginBottom="31dp"
-                    android:background="@drawable/detail_pickbutton_before" />
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:layout_marginBottom="11dp"
-                    android:layout_marginRight="14dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/btn_modify"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="modify"
-                        android:textColor="#959595"
-                        android:textSize="13sp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="4dp"
-                        android:layout_marginRight="4dp"
-                        android:text="/"
-                        android:textColor="#959595"
-                        android:textSize="13sp" />
-
-                    <TextView
-                        android:id="@+id/btn_delete"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="delete"
-                        android:textColor="#959595"
-                        android:textSize="13sp" />
-                </LinearLayout>
-
-            </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
 </LinearLayout>
